--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -166,10 +166,11 @@
 
   \section{Problemanalyse og design}
     \subsection*{Struktur}
-      I dette afsnit vil vi beskrive den strukturelle opbygning vi valgte i vores design.
+      I dette afsnit vil vi beskrive den strukturelle opbygning vi har overvejet i vores design.
 
       Vores design bygger op omkring fire kerne klasser,
       Game, Player, Hand og Card og en enumeration kaldet Suits - der huser de fire forskellige kulører.
+      De forskellige klasser skal mimikke fysiske objekter og funktioner der forekommer i spillet.
 
       \subsubsection*{Game}
       Game gemmer Player objekttet for dealeren, en liste af Player objekter af de spillere der deltager
@@ -186,6 +187,34 @@
       En hånd har en funktion der trækker et kort, altid det øverste(stak) denne har vi valgt at kalde \lstinline$drop$,
       den har en funktion der ligger et kort på stakken denne hedder \lstinline$draw$,
       så kan hele håndens kort erstattets, hånden skal kunne blandes og hånden skal kunne skrives ud som string.
+
+      \subsubsection*{Player}
+      En spiller/person skal have et navn(\lstinline$name$) i følge kravspecifikationen,
+      vi bruger også Playerklassen til AI, så derfor har vi også en bool(\lstinline$AI$),
+      \lstinline$index$ er array indexet for Playeren i Players arrayen, eller hvornår spilleren har tur,
+      og hand er et Hand objekt der indeholder spillerens hånd.
+
+      Ved siden af de properties har vi en \lstinline$score$ funktion der beregner spillens score,
+      ved at gå gennem de kort der er i hånden.
+      En \lstinline$isBusted$ der beregner om scoren er for høj og en \lstinline$scoreboard$,
+      der laver en tekstrepræsentaiton af spillerens hånd og score.
+
+      \subsubsection*{Card}
+      Et spillekort har en kulør, se Sektionen \ref{sssec:suits}, og en værdi/index der repræsentere kortet,
+      hvor 11 - 13 er (bonde, dame, konge) og numrene 2 - 10 har deres respektive værdi og et es har værdien 1.
+      Denne værdi må ikke sammenblandes med den værdi kortet har i Blackjack,
+      da alle billedkort har samme værdi - og derfor vil den værdi ikke være unik.
+      Denne \lstinline$value$ sammenlædet med \lstinline$suit$ skaber en unik værdi,
+      der kan bruges til at reprænsetere kortet når spillepladen vises.
+
+      Udover suit og value, har kortet en funktion \lstinline$toString()$ der returnere en tekst repræsentation af kortet.
+      \lstinputlisting[caption={Card's toString metode},label={lst:cardToString},firstline=18,lastline=32]{code/blackjack.fsx}
+
+      \subsubsection*{Suits} \label{sssec:suits}
+      En enumeration er, specielt i OOP, en god måde at repræsentere forskellige værdier for det sammen field, 
+      når der kun er de mulige værdier for et field. I vores tilfælde, med \lstinline$Card.suit$,
+      har vi kun de fire værdier og derfor ift validering, struktur m.m valgte vi at bruge en enumeration.
+
 
       \begin{figure}[H]
         \centering
