--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -145,7 +145,12 @@
 \section{Forord}
     
 \section{Introduktion}
-   \paragraph*{Sådan kompilerer du projektet\\}
+    Denne opgave er lavet i Programmering og Problemløsning(PoP),
+    på Datalogisk Institut - Københavns Universitet(DIKU).
+    Opgaven har opgavenummeret 10g,
+    målet for opgaven er at udvikle en spilbar version af det beskrevet SimpleJack.
+
+    \paragraph*{Sådan kompilerer du projektet\\}
     I \lstinline$/src$ mappen ligger der en Makefile og hvis man kører den, 
     kompileres \lstinline$game.exe$,
     begge filer kan findes i mappen \path{/src}.
@@ -159,9 +164,57 @@
 \newpage
 
 \section{Problemformulering}
-    
-    \subsection{Kravspecifikation}
 
+    \subsection{Kravspecifikation}
+      Dette forløb har fokus på Klasser og objekter,
+      under emnet Object Orienteret Programmering (OOP).
+      Et af kravene til dette projekt er defor at progammet skal være designet efter OOP paradigmen,
+      og at der skal være et medfølgende UML diagram som programdesignet følger.
+
+      Nedenunder følger vores opfattelse af de stillede krav(Opgavebeskrivelsen),
+      altså de krav vi måler vores færdige produkt på.
+
+      \begin{enumerate}
+        \item I SimpleJack spilles ikke om penge/jetoner men om sejr/tab, mellem en spiller og dealer
+        \item SimpleJack består af en dealer og 1-5 spillere
+        \item Der bruges et normalt kortspil (uden jokere), altså 13x4 = 52 kort
+        \item Ved spilstart får dealer og hver spiller 2 tilfælde kort fra bunken,
+        med billedsiden opad - så værdien er synlig for alle
+        \item Hver spiller har en tur, og dealeren har altid tur til sidst
+      \end{enumerate}
+
+      Kortværdierne i spillet er fordel efter følgende princip:
+      \begin{enumerate}
+        \item Billedkort (knægt, dame og konge) har alle værdien 10
+        \item Et es kan enten have værdien 1 eller 11
+        \item Kort mellem 2 og 10 har den påtrygte værdi
+      \end{enumerate}
+
+      Hver spiller, spiller et individuelt spil med dealeren,
+      hvor det gælder om at ende med en sum af kortenes værdier er højere end dealerens sum. Hvis summen overstiger 21 er deltageren "bust" og har tabt.
+      Fordi hver spiller, spiller et individuelt spil kan alle sagtens vinde.
+
+      Når en spiller har tur, skal en af de følgende handlinger udføres:
+      \begin{enumerate}
+        \item "Stand": Spilleren/dealeren vælger at give sin tur videre
+        \item "Hit": Spilleren/dealeren modtager et kort ad gangen fra bunken,
+        indtil han/hun stopper sin tur
+      \end{enumerate}
+
+      En spiller har vundet hvis ingen af følgende er gældende:
+      \begin{enumerate}
+        \item Spilleren er "bust"
+        \item Spillerens hånd har en sum der er lavere eller lig med,
+        summen af dealerens hånd
+        \item Både spilleren og dealeren har SimpleJack(Es og et billedkort)
+      \end{enumerate}
+
+      En spiller kan enten deltage i spillet via terminalen,
+      eller en spiller kan være en AI som følger følgende regler(Opgavebeskrivelsen):
+      \begin{enumerate}
+        \item Vælg altid "Hit", medmindre summen af egne kort kan være 17 eller over, ellers vælg "Stand"
+        \item Vælg tilfældigt mellem "Hit"og "Stand". Hvis "Hit"vælges trækkes et kort og der vælges igen tilfældigt mellem "Hit"og "Stand"osv.
+      \end{enumerate}
   \newpage
 
   \section{Problemanalyse og design}
@@ -214,7 +267,6 @@
       En enumeration er, specielt i OOP, en god måde at repræsentere forskellige værdier for det sammen field, 
       når der kun er de mulige værdier for et field. I vores tilfælde, med \lstinline$Card.suit$,
       har vi kun de fire værdier og derfor ift validering, struktur m.m valgte vi at bruge en enumeration.
-
 
       \begin{figure}[H]
         \centering
