--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -302,17 +302,62 @@
     \end{enumerate}
     Filen \path{tests.fsx} indeholder unit-tests af programmet.
 
-    \subsection{Hjælpefunktion}
-      Game.fsx
-      - validate_name
-      - validate_yn
+    De følgende funktioner kan findes i filen \path{game.fsx}:
+
+    \paragraph*{menu)}
+      Menufunktionen holder styr på hovedmenuen, den er vist i \lstinline$menuHeader$.
+      Når menuen vises, fjernes alt det der tidligere har været i konsollen.
+      Denne menu giver spilleren to muligheder:
+      \begin{enumerate}
+        \item 1 - New game, setup() og menu() kaldes
+        \item 2 - Exit game
+      \end{enumerate}
+      De kan vælges ved at bruge taster "1" eller "2".
+
+    \paragraph*{printScoreboard)}
+
+    \paragraph*{selectPlayer)}
+
+    \paragraph*{AI)}
+
+    \paragraph*{main)}
+
+    \paragraph*{setup)}
+      Setup funktionen håndtere start af et nyt spil.
+
+    \subsection{Hjælpefunktioner} \label{ssec:helpers}
+      De følgende hjælpefunktioner kan findes i filen \path{game.fsx}:
+      \paragraph*{validate name)}
+        Validere om længden af navnet(string) er større end nul,
+        og mindre end 25.
       
-      Blackjack.fsx
-      - write
-      - writeln
-      - readln
-      - setcursor
-      - clear
+      \paragraph*{validate yn)}
+        Validere om inputtet er i mængden {y, n} af strings.
+      
+      De følgende hjælpefunktioner kan findes i filen \path{blackjack.fsx}:
+      
+      \paragraph*{readln)}
+        Alias for \lstinline$System.Console.ReadLine()$
+        Der læses en linje fra konsollen og det returneres.
+
+      \paragraph*{setcursor)}
+        Typedefinitionen for funktioen er \lstinline$setcursor(x,y)$.
+        Alias for \lstinline$System.Console.SetCursorPosition(x,y)$
+        Placere kurseren et bestemt sted i konsollen.
+
+      \paragraph*{clear)}
+        Alias for \lstinline$System.Console.Clear()$.
+        Clear tømmer konsollen, så alt indhold fjernes.
+
+      \paragraph*{write)}
+        Typedefinitionen for funktioen er \lstinline$write (str:string)$.
+        Alias for \lstinline$System.Console.Write str$
+        Der skrives en string ud i konsollen, uden at der tilføjes ekstra nye linjer eller anden formatering.
+
+      \paragraph*{writeln)}
+        Typedefinitionen for funktioen er \lstinline$writeln (str:string)$.
+        Alias for \lstinline$System.Console.WriteLine str$.
+        Der skrives en linje i konsollen.
 
   \section{Afprøvning} \label{sec:unitTest}
 
