--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -183,7 +183,9 @@
     altså de krav vi måler vores færdige produkt på.
 
     \begin{enumerate}
-      \item I SimpleJack spilles ikke om penge/jetoner men om sejr/tab, mellem en spiller og dealer
+      \item I SimpleJack spilles ikke om penge/jetoner men om sejr/tab, mellem spiller(e) og dealer.\\
+            Hvilket i opgaven er opfattet som en/et enkelt sejr/nederlag; hvorefter spillet kan 
+            starte fra ny.
       \item SimpleJack består af en dealer og 1-5 spillere
       \item Der bruges et normalt kortspil (uden jokere), altså 13x4 = 52 kort
       \item Ved spilstart får dealer og hver spiller 2 tilfælde kort fra bunken,
