--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -168,19 +168,18 @@
 
 \section{Problemformulering} \label{sec:problem}
   I dette afsnit vil vi introducere det problem vi ønsker at løse med programmet,
-  og beskrive hvordan vi har forstået den udleveret kravspecifikation.
+  og beskrive hvordan vi har forstået den udleverede kravspecifikation.
 
-  I dette projekt vil vi gerne udvikle et program der kan spilles af 1-5 spillere i kommandopromten,
-  med mulighed for AI. Der er implementeret i F\# og følger reglerne for SimpleJack der er beskrevet i afsnittet Afsnit \ref{ssec:demands} - \nameref{ssec:demands}.
+  I dette projekt vil vi gerne udvikle et program der kan spilles af 1-5 spillere i kommandoprompten,
+  med mulighed for AI. Programmet er implementeret i F\# og følger reglerne for SimpleJack der er beskrevet i afsnit \ref{ssec:demands} - \nameref{ssec:demands}.
 
   \subsection{Kravspecifikation} \label{ssec:demands}
-    Dette forløb har fokus på Klasser og objekter,
-    under emnet Object Orienteret Programmering (OOP).
-    Et af kravene til dette projekt er defor at progammet skal være designet efter OOP paradigmen,
-    og at der skal være et medfølgende UML diagram som programdesignet følger.
+    Undervisningforløbet hvorigennem dette projekt udfodler sig, er der fokus på klasser og objekter,
+    via ement ”\textit{Object Orienteret Programmering}” (OOP).
+    Et af kravene, er defor at progammet skal være designet efter det objekt-orienteret paradigme.
+    Hertil kommer, at projektet skal planlægges gennem bl.a. et UML diagram.
 
-    Nedenunder følger vores opfattelse af de stillede krav(Opgavebeskrivelsen),
-    altså de krav vi måler vores færdige produkt på.
+    Herunder er kravene til det færdige produkt opstillet, hvorved det er beskrevet hvordan kravene fra projektoplægget er blevet fortolket.
 
     \begin{enumerate}
       \item I SimpleJack spilles ikke om penge/jetoner men om sejr/tab, mellem spiller(e) og dealer.\\
@@ -304,40 +303,12 @@
     \end{enumerate}
     Filen \path{tests.fsx} indeholder unit-tests af programmet.
 
-    De følgende funktioner kan findes i filen \path{game.fsx}:
 
-    \paragraph*{menu)}
-      Menufunktionen holder styr på hovedmenuen, den er vist i \lstinline$menuHeader$.
-      Når menuen vises, fjernes alt det der tidligere har været i konsollen.
-      Denne menu giver spilleren to muligheder:
-      \begin{enumerate}
-        \item 1 - New game, setup() og menu() kaldes
-        \item 2 - Exit game
-      \end{enumerate}
-      De kan vælges ved at bruge taster "1" eller "2".
-
-    \paragraph*{printScoreboard}~\\
-
-    \paragraph*{selectPlayer}~\\
-
-    \paragraph*{AI}~\\
-
-    \paragraph*{main}~\\
-
-    \paragraph*{setup}~\\
-      Setup funktionen håndtere start af et nyt spil.
+    
 
     \subsection{Hjælpefunktioner} \label{ssec:helpers}
-      De følgende hjælpefunktioner kan findes i filen \path{game.fsx}:
+      De følgende hjælpefunktioner kan findes i filen \path{/src/blackjack.fsx}, og er relateret til consol-håndtering.
       \begin{description}
-        \item{\texttt{validate name}}~\\
-          Validere om længden af navnet(string) er større end nul,
-          og mindre end 25.
-      
-        \item{\texttt{validate yn}}~\\
-          Validere om inputtet er i mængden {y, n} af strings.
-      
-        De følgende hjælpefunktioner kan findes i filen \path{blackjack.fsx}:
       
         \item{\texttt{readln}}~\\
           Alias for \lstinline$System.Console.ReadLine()$
@@ -361,7 +332,50 @@
           Typedefinitionen for funktioen er \lstinline$writeln (str:string)$.
           Alias for \lstinline$System.Console.WriteLine str$.
           Der skrives en linje i konsollen.
+      \end{description}~\\
+      
+      De følgende hjælpefunktioner kan findes i filen \path{/src/game.fsx}, og er relateret til selve game-flowet:
+      \begin{description}
+        \item{\texttt{validate name}}~\\
+          Validere om længden af navnet(string) er større end nul,
+          og mindre end 25.
+      
+        \item{\texttt{validate yn}}~\\
+          Validere om inputtet er i mængden {y, n} af strings.
+
+        \item{\texttt{printScoreboard}}~\\
+
+        \item{\texttt{selectPlayer}}~\\
+
+        \item{AI}~\\
       \end{description}
+      
+    \subsection{Klasser} \label{ssec:classes}
+      \begin{description}
+        \item{\texttt{Card}}~\\
+        \item{\texttt{Hand}}~\\
+        \item{\texttt{Player}}~\\
+        \item{\texttt{Game}}~\\
+      \end{description}
+    
+    \subsection{Loops} \label{ssec:loops}
+    \begin{description}
+      \item{\texttt{menu}}~\\
+      Menufunktionen holder styr på hovedmenuen, den er vist i \lstinline$menuHeader$.
+      Når menuen vises, fjernes alt det der tidligere har været i konsollen.
+      Denne menu giver spilleren to muligheder:
+      \begin{enumerate}
+        \item 1 - New game, setup() og menu() kaldes
+        \item 2 - Exit game
+      \end{enumerate}
+      De kan vælges ved at bruge taster "1" eller "2".
+      
+      \item{\texttt{setup}}~\\
+      Setup funktionen håndtere start af et nyt spil.
+      
+      \item{\texttt{main}}~\\
+    \end{description}
+      
       
   \section{Afprøvning} \label{sec:unitTest}
 
