--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -150,8 +150,8 @@
 \section{Introduktion} \label{sec:introduction}
     Denne opgave er lavet i Programmering og Problemløsning(PoP),
     på Datalogisk Institut - Københavns Universitet(DIKU).
-    Opgaven har opgavenummeret 10g,
-    målet for opgaven er at udvikle en spilbar version af det beskrevet SimpleJack.
+    Opgaven har opgavenummeret 10g, målet for opgaven er at
+    udvikle en spilbar version af spillet SimpleJack.
 
     \paragraph*{Sådan kompilerer du projektet\\}
     I \path{/src} mappen ligger der en Makefile og hvis man kører den, 
