--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -385,9 +385,23 @@
     forventede resultat og false angiver en fejl i koden.
 
 	\section{Diskussion og konlusion} \label{sec:conclusion}
+    Dette afsnit vil opsummere resultaterne for vores projekt og proceessen vi har været igennem.
+
+    I dette projekt har vi arbejdet ud fra nogle stillede hårde krav (Se \namedref{ssec:demands}),
+    og pga det kan resultatet af dette projekt måles direkte - ved at kigge på dem.
+
+    Klassestrukturen er designet ved hjælp af et UML-diagram, vist i \namedref{sec:design},
+    og designet følger de fysiske elementer.
+
+    Vores egen problemformulering, som vi har formuleret og nu vil konkludere kan ses i \namedref{sec:problem}.
+    Vi har i dette projekt udviklet et spil der følger reglerne for SimpleJack i F\# (Se \namedref{sec:programDescription} og \namedref{sec:unitTest}).
+    Spillet kan spilles af 1-5 spillere, eksklusiv dealeren, og det er muligt at have AI spillere.
+    Spillet kan også spilles af spillere gennem kommandopromten, som ønsket.
+
+    Programmet er unittestet(Se \namedref{sec:unitTest}), dokumenteret efter XML-standarden og kan kompileres med fsharpc og køres med mono.
+  \newpage
   
-    \newpage
-    \section{Bilag}
+  \section{Bilag}
       Dette afsnit indeholder en brugervejledning for brug og spil af SimpleJack og spillets programkode.
 
       \subsection{Brugervejledning} \label{ssec:manual}
